--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -48,6 +48,7 @@
 	commentstyle=\color{sh_comment}\itshape,
 	captionpos=b,
 	xleftmargin=0.7cm,
+	aboveskip=1em,
 	escapebegin={$$}, escapeend={$$}
 }
 
