--- a/src/content/activity-language.tex
+++ b/src/content/activity-language.tex
@@ -2,9 +2,9 @@
 \chapter{Gamma Activity Language}\label{ch:gamma-activity-language}
 %----------------------------------------------------------------------------
 
-The high-level nature of SysML activities means they are easy to use for modeling complicated behaviours of distributed system, but their complexity encumbers formal verification. As discussed above in \autoref{ssec:activities-as-petri-nets}, we can define a semantic-preserving mapping between activities and Petri nets (which have a formal semantics), however, that mapping is not complete, as it disregards the data contained in tokens.
+The high-level nature of SysML activities means they are easy to use for modeling complicated behaviours of distributed system, but their complexity encumbers formal verification. As discussed above in \autoref{ssec:activities-as-petri-nets}, we can define a semantic-preserving mapping between activities and Petri nets (which have a formal semantics), however, that mapping is not complete as it disregards the data contained in tokens.
 
-The Gamma Statechart Composition Framework (\autoref{sec:gamma}) implements a model transformation pipeline (see \autoref{fig:gamma-overview}) for the formal verification of collaborating statecharts, however, it does not include activity diagrams. For this reason, I propose the Gamma Activity Language (GATL) (\autoref{ch:gamma-activity-language}), and integrate it (\autoref{ch:activiy_verification}) into the transformation pipeline.
+The Gamma Statechart Composition Framework (\autoref{sec:gamma}) implements a model transformation pipeline (see \autoref{fig:gamma-overview}) for the formal verification of collaborating statecharts, however, it does not include activity diagrams. In order to support the definition and verification of activites in the Gamma framework, I propose the Gamma Activity Language (GATL) (\autoref{ch:gamma-activity-language}), and integrate it (\autoref{ch:activiy_verification}) into the transformation pipeline.
 
 \input{content/activity-language/design-decisions}
 \input{content/activity-language/formal-definition}
