--- a/src/content/background/formal-verification.tex
+++ b/src/content/background/formal-verification.tex
@@ -8,7 +8,7 @@ In order to raise the reliability of system models, various analysis techniques 
 
 \emph{Model checking} is a formal verification method to verify properties of finite systems, i.e., to decide whether a given formal model \(M\) satisfies a given requirement \(\gamma\) or not. The name comes from formal logic, where a logical formula may have zero or more models, which define the interpretation of the symbols used in the formula and the base set such that the formula is true. In this sense, the question is whether the formal model is indeed a model of the formal requirement: \(M \not\models \gamma\)?
 
-Model checker algorithms (see \autoref{fig:model_checking}), such as the ones used in UPPAAL\footnote{https://uppaal.org/} \cite{uppaal} or Theta\footnote{https://inf.mit.bme.hu/en/theta} \cite{theta} can answer this question, and can even return a \emph{proof} (i.e., a part of the model) that \(M\) indeed does satisfy said requirement\footnote{These proofs usually come in the form of an execution trace}. If the formal requirement does not hold for the model-requirement pair, the model checker only returns a \emph{no} state.
+Model checker algorithms (see \autoref{fig:model_checking}), such as the ones used in UPPAAL\footnote{https://uppaal.org/}~\cite{uppaal} or Theta\footnote{https://inf.mit.bme.hu/en/theta} ~\cite{theta} can answer this question, and can even return a \emph{proof} (i.e., a diagnostic trace of the model) that \(M\) indeed does satisfy said requirement\footnote{These proofs usually come in the form of an execution trace}.
 
 \begin{figure}[!ht]
 	\centering
@@ -26,7 +26,7 @@ Model checker algorithms (see \autoref{fig:model_checking}), such as the ones us
 	\label{fig:petri_net}
 \end{figure}
 
-Petri nets are a widely used formalism to model concurrent, asynchronous systems \cite{24143}. The formal definition of a Petri net \cite{REISIG19911} is as follows (see \autoref{fig:petri_net} for an illustration of the notations).
+Petri nets are a widely used formalism to model concurrent, asynchronous systems~\cite{24143}. The formal definition of a Petri net ~\cite{REISIG19911} is as follows (see \autoref{fig:petri_net} for an illustration of the notations).
 
 \begin{definition}[Petri net]
 	
@@ -46,11 +46,11 @@ In words: W describes the \emph{weight} of each flow from a transition to a plac
 
 \subsection{Activities as Petri Nets}\label{ssec:activities-as-petri-nets}
 
-Formal verification requires models to be specified using \emph{mathematical} precision, however UML/SysML does not have precise semantics \cite{pssm-testing, pssm, euml}. Huang et al. in \cite{https://doi.org/10.1002/sys.21524} propose a way to \emph{partially} map SysML activity diagrams to Petri nets. In the following, I will summarise their work.
+Formal verification requires models to be specified using \emph{mathematical} precision, i.e., the modeling language must have a formal syntax and semantics, however UML/SysML does not have precise semantics~\cite{pssm-testing, pssm, euml}. Huang et al. in ~\cite{https://doi.org/10.1002/sys.21524} propose a way to \emph{partially} map SysML activity diagrams to Petri nets, giving a denotational semantics to the subset of SysML Activity Diagrams. In the following, I will summarise their work, as my main contributions (see \autoref{ch:gamma-activity-language}) build on it.
 
 \subsubsection*{Constrained Subset of SysML}\label{ssec:sysml_assumptions}
 
-Since UML/SysML Activity Diagrams do not have precise execution semantics, the Petri net mapping can only be done for a limited subset of the modeling elements: \emph{actions}, \emph{initial nodes}, \emph{final nodes}, \emph{join nodes}, \emph{fork nodes}, \emph{merge nodes}, \emph{decision nodes}, \emph{pins} and \emph{object/control flows}, which have precise execution semantics as defined in the Foundational Subset for Executable UML Models \cite{fuml}.
+Since UML/SysML Activity Diagrams do not have precise execution semantics, the Petri net mapping can can be defined only for a limited subset of the modeling elements: \emph{actions}, \emph{initial nodes}, \emph{final nodes}, \emph{join nodes}, \emph{fork nodes}, \emph{merge nodes}, \emph{decision nodes}, \emph{pins} and \emph{object/control flows}, which have precise execution semantics as defined in the Foundational Subset for Executable UML Models~\cite{fuml}.
 
 The paper also assumes the following constrains:
 
@@ -66,13 +66,13 @@ These constraints allow the mapping between activities and Petri nets, however, 
 
 Activity elements can be grouped into two sets: \emph{load-and-send} (LAS) and \emph{immediate-repeat} (IR).
 
-LAS nodes are fired when all their inputs have tokens. When an \emph{LAS} node fires, the number of tokens associated with the input flows/pin is consumed and the number of tokens associated with an output flows/pin is added. In SysML activity diagrams, the execution semantics of all nodes, except \emph{decision} and \emph{merge} nodes are LAS, because these nodes are fired when all their input nodes have at least one token. As a result, these nodes can be mapped to \emph{transitions} in the resulting Petri net.
+LAS nodes are fired when all their inputs have tokens. When an \emph{LAS} node fires, the number of tokens associated with the input flows/pin is consumed and the number of tokens associated with an output flows/pin is added. In SysML activity diagrams, the execution semantics of all nodes - except \emph{decision} and \emph{merge} nodes - are LAS, because these nodes are fired when all their input nodes have at least one token. As a result, these nodes can be mapped to \emph{transitions} in the resulting Petri net.
 
-In contrast, as soon as an \emph{IR} node receives a token from any input, it immediately adds a token to its output nodes. For SysML activity diagrams, merge nodes, decision nodes IR nodes, because they are fired immediately when any token is received. As a result, these nodes can be mapped to \emph{places} in the resulting Petri net.
+In contrast, as soon as an \emph{IR} node receives a token from any input, it immediately adds a token to its output nodes. For SysML activity diagrams, merge nodes, decision nodes are IR nodes, because they are fired immediately when any token is received. As a result, these nodes can be mapped to \emph{places} in the resulting Petri net.
 
 Given the set of assumptions in \autoref{ssec:sysml_assumptions}, control flows and object flows in an activity diagram can be mapped to arcs in a Petri net.
 
-Finally, after mapping the elements, the resulting Petri net may contain transition-transition and place-place arcs, which are not valid; as the final step, these arcs must be split in two by inserting a transition or a place in the middle, making the model conform to the formalism.
+Finally, after mapping the elements, the resulting Petri net may contain transition-transition and place-place arcs, which are not valid; as the final step, these arcs must be split in two by inserting a transition or a place in the middle (with a weight of 1), making the model conform to the formalism.
 
 \subsubsection*{Example Mapping}
 
@@ -85,4 +85,4 @@ Finally, after mapping the elements, the resulting Petri net may contain transit
 
 \autoref{fig:activity-pn-mapping} shows an example mapping from the activity \autoref{fig:activity-running-example}. The resulting elements are annotated with the names of their counter parts in the activity diagram.
 
-For more information, please refer to \cite{https://doi.org/10.1002/sys.21524}.
+For more about the Petri net mapping, please refer to~\cite{https://doi.org/10.1002/sys.21524}.
