--- a/src/content/background/gamma.tex
+++ b/src/content/background/gamma.tex
@@ -2,12 +2,12 @@
 \section{The Gamma Statechart Composition Framework}\label{sec:gamma}
 %----------------------------------------------------------------------------
 
-The Gamma Statechart Composition Framework\footnote{https://inf.mit.bme.hu/en/gamma} \cite{mixed_statecharts_2020} is an integrated tool to support the design, verification and validation as well as code generation for component-based reactive systems. The behaviour of each component is captured by a statechart, while assembling the system from components is driven by a domain-specific composition language\footnote{The composition language be the \emph{ibd} model in SysML}. Gamma supports formal verification by mapping composite statecharts to a back-end model checker. Execution traces obtained as witnesses during verification are back-annotated as test cases to replay an error trace or to validate external code generators~\cite{molnar2018gamma}. 
+The Gamma Statechart Composition Framework\footnote{https://inf.mit.bme.hu/en/gamma}~\cite{mixed_statecharts_2020} is an integrated tool to support the design, verification and validation of, as well as code generation for component-based reactive systems. The behaviour of each component is captured by a statechart, while assembling the system from components is driven by a domain-specific composition language\footnote{The composition language bears close similarities to the \emph{ibd} language in SysML}. Gamma supports the formal verification of the assembled system by mapping composite statecharts to a back-end model checker. Execution traces obtained as witnesses during verification are back-annotated as test cases to replay an error trace or to validate external code generators~\cite{molnar2018gamma}. 
 
 \begin{figure}[!ht]
 	\centering
-	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{gamma-functionality-overview}
-	\caption{The overview of model transformation chains and modeling languages of the Gamma framework \cite{mixed_statecharts_2020}. The parts relevant to this work have been marked with red outline.}
+	\includesvg[inkscapelatex=false, width=130mm, keepaspectratio]{gamma-functionality-overview}
+	\caption{The overview of model transformation chains and modeling languages of the Gamma framework~\cite{mixed_statecharts_2020}. The parts relevant to this work have been marked with red outline.}
 	\label{fig:gamma-overview}
 \end{figure}
 
@@ -23,14 +23,14 @@ The workflow of Gamma builds on a model transformation chain depicted in \autore
 	\item The \textbf{Gamma Trace Language (GTL)} is a high-level specification language for  execution traces of (composite) components.
 \end{itemize}
 
-Optionally, statechart models defined in supported modeling tools (front-ends) can be imported into Gamma (Step 1), which can be integrated according to well-defined execution and interaction semantics (Step 2). The resulting composite model is processed and transformed into the input formalisms of integrated model checker back-ends (Step 3). The model checker back-ends provide witnesses (diagnostic traces) based on specified properties, which are back-annotated, resulting in abstract traces (Step 4).
-Finally, the abstract traces are mapped into concrete (executable) traces tailored to the targeted execution environment (Step 5). For a more detailed description, see \cite{mixed_statecharts_2020}.
+The component integration and verification workflow in Gamma is as follows. Optionally, statechart models defined in supported modeling tools (front-ends) can be imported into Gamma (Step 1), which can be integrated according to well-defined execution and interaction semantics (Step 2). The resulting composite model is processed and transformed into the input formalisms of integrated model checker back-ends (Step 3). The model checker back-ends provide witnesses (diagnostic traces) based on specified properties, which are back-annotated, resulting in abstract traces (Step 4).
+Finally, the abstract traces are mapped into concrete (executable) traces tailored to the targeted execution environment (Step 5). For a more detailed description, see~\cite{mixed_statecharts_2020}.
 
 \subsection{Example Statechart}
 
-\autoref{lst:gamma-statechart} shows the Gamma Statechart representation of the State Machine introduced in \autoref{fig:sysml_state_machine}.
+\autoref{lst:gamma-statechart} shows the Gamma Statechart representation of the SysML State Machine introduced in \autoref{fig:sysml_state_machine}.
 
-\begin{lstlisting}[float,language=statechart, caption={The traffic light controller state machine in the Gamma textual representation.}, label={lst:gamma-statechart}]
+\begin{lstlisting}[float,language=statechart, caption={The traffic light controller state machine in the textual representation of Gamma's statechart language.}, label={lst:gamma-statechart}]
 package TrafficLightCtrl
 import "Interfaces"
 statechart TrafficLightCtrl [
@@ -40,11 +40,6 @@ statechart TrafficLightCtrl [
 ] {
 	timeout BlinkingYellowTimeout3
 	timeout BlackTimeout4
-	transition from Yellow to Red when Control.toggle
-	transition from Normal to Interrupted when PoliceInterrupt.police
-	// ...
-	transition from BlinkingYellow to Black when timeout BlinkingYellowTimeout3
-	transition from Black to BlinkingYellow when timeout BlackTimeout4
 	region main_region {
 		state Normal {
 			region normal {
@@ -75,5 +70,10 @@ statechart TrafficLightCtrl [
 		}
 		initial Entry0
 	}
+	transition from Yellow to Red when Control.toggle
+	transition from Normal to Interrupted when PoliceInterrupt.police
+	// ...
+	transition from BlinkingYellow to Black when timeout BlinkingYellowTimeout3
+	transition from Black to BlinkingYellow when timeout BlackTimeout4
 }
 \end{lstlisting}
