--- a/src/content/background/xsts.tex
+++ b/src/content/background/xsts.tex
@@ -2,7 +2,7 @@
 \section{Extended Symbolic Transition System}\label{sec:xsts}
 %----------------------------------------------------------------------------
 
-The high-level nature of engineering models means they are easy-to-use for engineers, but leads to difficulties during the formal verification process. SysML state machines and acitivty diagrams for example contain high-level modeling constructs that make the modeling workflow more intuitive and enable the modeling of complex systems, however they are difficult to process using formal methods that are defined on low-level mathematical formalism. In this section, I introduce the Extended Symbolic Transition System \cite{xsts} language, which is a low-level modeling formalism designed to bridge the abstraction gap between engineering models and formal methods.
+In this section, I introduce the Extended Symbolic Transition System~\cite{xsts} language, which is a low-level modeling formalism designed to bridge the abstraction gap between engineering models and formal methods.
 
 \subsection{Formal definition}
 
@@ -21,9 +21,9 @@ The high-level nature of engineering models means they are easy-to-use for engin
 	\end{itemize}
 \end{definition}\label{def:xsts}
 
-In any state of the system, a single operation is selected from the sets introduced above (\(\mathit{Tr}\), \(\mathit{In}\) and \(\mathit{En}\)). The set from where the operation can be selected depends on the current state: In the initial state - which is described by the initialization vector \(\mathit{IV}\) - only operations from the \(\mathit{In}\) set can be executed. Operations from the \(\mathit{In}\) set can only fire in the initial state and nowhere else. After that, \(\mathit{En}\) and \(\mathit{Tr}\) are selected in an alternating manner.
+In any state of the system, a single operation is selected from the sets introduced above (\(\mathit{Tr}\), \(\mathit{In}\) and \(\mathit{En}\)). The set from where the operation can be selected depends on the current state: In the initial state - which is described by the initialization vector \(\mathit{IV}\) - operations only from the \(\mathit{In}\) set can be executed. Operations from the \(\mathit{In}\) set can fire only in the initial state and nowhere else. After that, operations from \(\mathit{En}\) and \(\mathit{Tr}\) are selected in an alternating manner.
 
-Operations \(\mathit{op} \in \mathit{Ops}\) describe the transitions between states of the system, where \(\mathit{Ops}\) is the set of all possible transitions. All operations are atomic in the sense that they are either executed in their entirety or none at all. XSTS defines the following operations:
+Operations \(\mathit{op} \in \mathit{Ops}\) describe the transitions between states of the system, where \(\mathit{Ops}\) is the set of all possible transitions. All operations are atomic in the sense that they are either executed in their entirety or none at all. XSTS defines the following basic and composite operations.
 
 \paragraph{Basic operations} 
 
@@ -31,8 +31,8 @@ Basic operations contain no inner (nested) operations.
 
 \begin{itemize}
 	\item \emph{Assignments} assign a given value \(v\) from domain \(d_n\) to variable \(V_n\).
-	\item \emph{Havocs} behave likewise, except the value is not predetermined; giving a way to assign random value to a variable.
-	\item Lastly, \emph{assume} operations check a condition, and can only be executed if their condition evaluates to \emph{true}.
+	\item \emph{Havocs} behave likewise, except the value is not predetermined, giving a way to assign a random value to a variable.
+	\item Lastly, \emph{assume} operations check a condition, and can be executed only if their condition evaluates to \emph{true}.
 \end{itemize}
 
 \paragraph{Composite operations}
@@ -41,7 +41,7 @@ Composite operations contain other operations, and can be used to describe compl
 
 \begin{itemize}
 	\item \emph{Sequences} are essentially multiple operations executed one after the other.
-	\item \emph{Parallels} are like sequences, however they execute all operations at the same time.
+	\item \emph{Parallels} are like sequences, however they execute all operations in parallel.
 	\item And lastly, \emph{choices} model non-deterministic choices between multiple operations; one and only one branch of the choice operation is selected for execution.
 \end{itemize}
 
@@ -49,7 +49,7 @@ Note that while these are composite operations, their execution is still atomic;
 
 \subsection{Traffic Light Controller Example}
 
-\autoref{lst:gamma-xsts} is the textual representation of the traffic light controller statechart (\autoref{fig:sysml_state_machine}) transformed\footnote{The transformation was done using Gamma.} to XSTS. For a more exact presentation please see \autoref{sec:xsts_language}.
+\autoref{lst:gamma-xsts} is the textual representation of the traffic light controller statechart (\autoref{fig:sysml_state_machine}) transformed\footnote{The transformation was done using Gamma} to XSTS. For a more exact presentation please see \autoref{sec:xsts_language}.
 
 \begin{lstlisting}[float,language=xsts, caption={Gamma XSTS Language representing the traffic light controller statechart.}, label={lst:gamma-xsts}]
 type ActivityNodeState : { __Idle__, __Running__, __Done__ }
